# luapatcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.py  build_log.txt  build_static.bat  main.py  requirements.txt  setup.iss  setup_build_environment.bat
.github/workflows/: release.yml
src/: config.h  gamecard.cpp  gamecard.h  glassbutton.cpp  glassbutton.h  loadingspinner.cpp  loadingspinner.h  main.cpp  mainwindow.cpp  mainwindow.h  materialicons.h  resources.qrc  static_plugins.cpp  terminaldialog.cpp  terminaldialog.h
src/resources/: generator.js
src/utils/: colors.cpp  colors.h  gameinfo.h  paths.cpp  paths.h
src/workers/: fixdownloadworker.cpp  fixdownloadworker.h  generatorworker.cpp  generatorworker.h  indexdownloadworker.cpp  indexdownloadworker.h  luadownloadworker.cpp  luadownloadworker.h  luagenerationworker.cpp  luagenerationworker.h  restartworker.cpp  restartworker.h
webserver/: .gitignore  .vercelignore  README.md  app.py  games_index.json  generate_index.py  mainfest.py  netlify.toml  package-lock.json  package.json
webserver/.github/workflows/: generate-index.yml  update-games.yml
webserver/netlify/functions/: api.js
